--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,24 @@
 @theme {
   --color-primary: #EAD51B;
   --font-jacques: Jacques Francois;
+  --animate-title-top: title-top 0.6s cubic-bezier(0,.71,.35,1);
+  @keyframes title-top {
+    from {
+      transform: translateY(-5.5vh)
+    }
+    to {
+      transform: translateY(0vh)
+    }
+  }
+  --animate-title-bottom: title-bottom 0.6s cubic-bezier(0,.71,.35,1);
+  @keyframes title-bottom {
+    from {
+      transform: translateY(5.5vh)
+    }
+    to {
+      transform: translateY(0vh)
+    }
+  }
 }
 
 @layer base {
